fix font size in footer on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,6 +267,10 @@ img.prevu {
   .features-header {
     font-size: 2em;
   }
+
+  .footer {
+    font-size: 0.8em;
+  }
 }
 
 /* Registration page */
